export class GetAuthorError extends Error {}
