export class GetEmailError extends Error {}
